#63270 - fix envoi email agent après dic & historique dic